Fixed errors
Fixed errors found with Apache Ant.