@@ -6,7 +6,6 @@ import org.jfree.chart.ChartPanel;
 import org.jfree.chart.JFreeChart;
 import org.jfree.chart.plot.PiePlot;
 import org.jfree.data.general.DefaultPieDataset;
-import edu.hawaii.chengh.calorie.Avatar;
 
 /**
  * Display users calorie intake and limit amount.
@@ -21,7 +20,9 @@ public class PieChart extends JPanel {
   private DefaultPieDataset data;
   private JFreeChart pieDisplay;
 
-  
+  /**
+   * Construct the chart.
+   */
   public PieChart() {
     data = new DefaultPieDataset();
     data.setValue("", 0);
@@ -40,13 +41,14 @@ public class PieChart extends JPanel {
    * User views data of calorie limit and approximate intake.
    * 
    * @param weightWatcher - user.
-   * @return 
    */
   public void loadData(Avatar weightWatcher) {
     int remaining = weightWatcher.getCalLimit() - weightWatcher.getInTake();
     data.clear();
-    data.setValue("Intake " + weightWatcher.getInTake() , new Integer(weightWatcher.getInTake()));
-    data.setValue("Remaining Limit " + remaining, new Integer(remaining));
+    data.setValue("Intake " + weightWatcher.getInTake() , 
+                      Integer.valueOf(weightWatcher.getInTake()));
+    
+    data.setValue("Remaining Limit " + remaining, Integer.valueOf(remaining));
     
     pieDisplay = ChartFactory.createPieChart("Amount of Calories", data, true, true, false);
     
